--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -13167,7 +13167,7 @@
                 </div>
                 <div class="modal__snackbar hidden">
                   <div class="">
-                    <div role="group" class="_16ft90e">
+                    <div role="group" class="snackbar-box">
                       <div class="_prpxj8">
                         <svg
                           viewBox="0 0 16 16"
