--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -24986,7 +24986,7 @@
               </div>
               <div class="modal__snackbar hidden">
                 <div class="">
-                  <div role="group" class="_16ft90e">
+                  <div role="group" class="snackbar-box">
                     <div class="_prpxj8">
                       <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-label="Success" role="img"
                         focusable="false" style="
@@ -25100,7 +25100,7 @@
                       </button>
                       <div class="_ei7ywt hidden">
                         <div class="_7h9abkc">
-                          <div role="group" class="_16ft90e">
+                          <div role="group" class="snackbar-box">
                             <div class="_prpxj8"><svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"
                                 aria-label="Success" role="img" focusable="false"
                                 style="display: block; height: 16px; width: 16px; fill: currentcolor;">
