--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -13168,7 +13168,7 @@
                 <div class="modal__snackbar hidden">
                   <div class="">
                     <div role="group" class="snackbar-box">
-                      <div class="_prpxj8">
+                      <div class="snackbar-icon">
                         <svg
                           viewBox="0 0 16 16"
                           xmlns="http://www.w3.org/2000/svg"
@@ -13179,7 +13179,7 @@
                             display: block;
                             height: 16px;
                             width: 16px;
-                            fill: currentcolor;
+                            fill: var(--success-color);
                           "
                         >
                           <path
