--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -24987,13 +24987,13 @@
               <div class="modal__snackbar hidden">
                 <div class="">
                   <div role="group" class="snackbar-box">
-                    <div class="_prpxj8">
+                    <div class="snackbar-icon">
                       <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-label="Success" role="img"
                         focusable="false" style="
                                             display: block;
                                             height: 16px;
                                             width: 16px;
-                                            fill: currentcolor;
+                                            fill: var(--success-color);
                                           ">
                         <path
                           d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm3.159 4.869L6.67 9.355 4.42 7.105 3.289 8.236 6.67 11.62 12.291 6z">
@@ -25101,9 +25101,9 @@
                       <div class="_ei7ywt hidden">
                         <div class="_7h9abkc">
                           <div role="group" class="snackbar-box">
-                            <div class="_prpxj8"><svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"
+                            <div class="snackbar-icon"><svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"
                                 aria-label="Success" role="img" focusable="false"
-                                style="display: block; height: 16px; width: 16px; fill: currentcolor;">
+                                style="display: block; height: 16px; width: 16px; fill: var(--success-color);">
                                 <path
                                   d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm3.159 4.869L6.67 9.355 4.42 7.105 3.289 8.236 6.67 11.62 12.291 6z">
                                 </path>
