snackbar-text-wrapper

--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -13187,7 +13187,7 @@
                           ></path>
                         </svg>
                       </div>
-                      <div class="_ui1luc">
+                      <div class="snackbar-text-wrapper">
                         <div tabindex="0" class="_1n6q029">Link Copied</div>
                       </div>
                     </div>
