--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -25000,7 +25000,7 @@
                         </path>
                       </svg>
                     </div>
-                    <div class="_ui1luc">
+                    <div class="snackbar-text-wrapper">
                       <div tabindex="0" class="_1n6q029">Link Copied</div>
                     </div>
                   </div>
@@ -25108,7 +25108,7 @@
                                   d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm3.159 4.869L6.67 9.355 4.42 7.105 3.289 8.236 6.67 11.62 12.291 6z">
                                 </path>
                               </svg></div>
-                            <div class="_ui1luc">
+                            <div class="snackbar-text-wrapper">
                               <div tabindex="0" class="_1n6q029">Copied!</div>
                             </div>
                           </div>
