snackbar-text-label

--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -13188,7 +13188,7 @@
                         </svg>
                       </div>
                       <div class="snackbar-text-wrapper">
-                        <div tabindex="0" class="_1n6q029">Link Copied</div>
+                        <div tabindex="0" class="snackbar-text-label">Link Copied</div>
                       </div>
                     </div>
                   </div>
