--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -25001,7 +25001,7 @@
                       </svg>
                     </div>
                     <div class="snackbar-text-wrapper">
-                      <div tabindex="0" class="_1n6q029">Link Copied</div>
+                      <div tabindex="0" class="snackbar-text-label">Link Copied</div>
                     </div>
                   </div>
                 </div>
@@ -25109,7 +25109,7 @@
                                 </path>
                               </svg></div>
                             <div class="snackbar-text-wrapper">
-                              <div tabindex="0" class="_1n6q029">Copied!</div>
+                              <div tabindex="0" class="snackbar-text-label">Copied!</div>
                             </div>
                           </div>
                         </div>
