--- a/edit/what.html
+++ b/edit/what.html
@@ -3948,7 +3948,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
             </div>
             <footer>
              <div style="--gp-section-max-width: 1120px;">
-              <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+              <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
               <div data-plugin-in-point-id="CONCEPT_REFINEMENT_0_FOOTER" data-section-id="CONCEPT_REFINEMENT_0_FOOTER" style="padding-top: 16px; padding-bottom: 16px;">
                <div class="c1sjhfzr t1pii32p dir dir-ltr">
                 <div class="flex-before-after dir dir-ltr">
