--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1543,7 +1543,7 @@
 <div style="--gp-section-max-width: 1120px">
   <div class="section-container">
     <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
-      <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221)"></div>
+      <div class="hr" style="border-top-color: rgb(221, 221, 221)"></div>
       <div
         data-plugin-in-point-id="EDUCATION_EXPERIENCES"
         data-section-id="EDUCATION_EXPERIENCES"
@@ -2439,7 +2439,7 @@
 <div style="--gp-section-max-width: 1120px">
   <div class="section-container">
     <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
-      <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221)"></div>
+      <div class="hr" style="border-top-color: rgb(221, 221, 221)"></div>
       <div
         data-plugin-in-point-id="AVAILABILITY_EXPERIENCES"
         data-section-id="AVAILABILITY_EXPERIENCES"
@@ -8950,7 +8950,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
       <div style="--gp-section-max-width:1120px;">
         <div class="section-container">
           <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
-            <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+            <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
             
           </div>
         </div>
