--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -2909,7 +2909,7 @@
 
                                   <div class="flex-before-after dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px;">
-                                      <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+                                      <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
                                       <div data-plugin-in-point-id="INSERT_LUXE" data-section-id="INSERT_LUXE"
                                         style="padding-top: 56px; padding-bottom: 56px; background-color: rgb(247, 247, 247); --gp-section-background-color: #F7F7F7;">
                                         <div class="section-container">
@@ -2967,7 +2967,7 @@
                                     <div style="--gp-section-max-width: 1120px;">
                                       <div class="section-container">
                                         <div style="--maxWidth: 1120px;" class="wrapper-full max__width dir dir-ltr">
-                                          <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+                                          <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
                                           <div data-plugin-in-point-id="HIGHLIGHTS_LUXE"
                                             data-section-id="HIGHLIGHTS_LUXE"
                                             style="padding-top: 32px; padding-bottom: 24px;">
@@ -3098,7 +3098,7 @@
                                   <div style="--gp-section-max-width: 1120px;">
                                     <div class="section-container">
                                       <div style="--maxWidth: 1120px;" class="wrapper-full max__width dir dir-ltr">
-                                        <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+                                        <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
                                         <div data-plugin-in-point-id="INCLUDED_SERVICES_LUXE"
                                           data-section-id="INCLUDED_SERVICES_LUXE"
                                           style="padding-top: 32px; padding-bottom: 24px;">
@@ -3159,7 +3159,7 @@
                                     <div style="--gp-section-max-width: 1120px;">
                                       <div class="section-container">
                                         <div style="--maxWidth: 1120px;" class="wrapper-full max__width dir dir-ltr">
-                                          <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+                                          <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
                                           <div data-plugin-in-point-id="ADD_ON_SERVICES_LUXE"
                                             data-section-id="ADD_ON_SERVICES_LUXE"
                                             style="padding-top: 32px; padding-bottom: 24px;">
@@ -3472,7 +3472,7 @@
                                   <div style="--gp-section-max-width: 1120px;">
                                     <div class="section-container">
                                       <div style="--maxWidth: 1120px;" class="wrapper-full max__width dir dir-ltr">
-                                        <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+                                        <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
                                         <div data-plugin-in-point-id="AMENITIES_LUXE" data-section-id="AMENITIES_LUXE"
                                           style="padding-top: 48px; padding-bottom: 48px;">
                                           <section>
@@ -3578,7 +3578,7 @@
                                   <div style="--gp-section-max-width: 1120px;">
                                     <div class="section-container">
                                       <div style="--maxWidth: 1120px;" class="wrapper-full max__width dir dir-ltr">
-                                        <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+                                        <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
                                         <div data-plugin-in-point-id="EDUCATION_LUXE" data-section-id="EDUCATION_LUXE"
                                           style="padding-top: 32px; padding-bottom: 24px;">
                                           <div class="h1e0znt6 dir dir-ltr">
@@ -4233,7 +4233,7 @@
                                     <div style="--gp-section-max-width: 1120px;">
                                       <div class="section-container">
                                         <div style="--maxWidth: 1120px;" class="wrapper-full max__width dir dir-ltr">
-                                          <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+                                          <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
                                           <div data-plugin-in-point-id="LOCATION_DEFAULT"
                                             data-section-id="LOCATION_DEFAULT"
                                             style="padding-top: 48px; padding-bottom: 48px;">
@@ -12533,7 +12533,7 @@
                                 </div>
                                 <div class="flex-before-after dir dir-ltr">
                                   <div style="--gp-section-max-width: 1120px;">
-                                    <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+                                    <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
                                     <div data-plugin-in-point-id="INSERT_LUXE" data-section-id="INSERT_LUXE"
                                       style="padding-top: 88px; padding-bottom: 104px; background-color: rgb(247, 247, 247); --gp-section-background-color: #F7F7F7;">
                                       <div class="section-container">
@@ -12590,7 +12590,7 @@
                                   <div style="--gp-section-max-width: 1120px;">
                                     <div class="section-container">
                                       <div style="--maxWidth: 1120px;" class="wrapper-full max__width dir dir-ltr">
-                                        <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+                                        <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
                                         <div data-plugin-in-point-id="HIGHLIGHTS_LUXE" data-section-id="HIGHLIGHTS_LUXE"
                                           style="padding-top: 48px; padding-bottom: 48px;">
                                           <div class="tab__content-visibility">
@@ -12738,7 +12738,7 @@
                                   <div style="--gp-section-max-width: 1120px;">
                                     <div class="section-container">
                                       <div style="--maxWidth: 1120px;" class="wrapper-full max__width dir dir-ltr">
-                                        <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+                                        <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
                                         <div data-plugin-in-point-id="INCLUDED_SERVICES_LUXE"
                                           data-section-id="INCLUDED_SERVICES_LUXE"
                                           style="padding-top: 48px; padding-bottom: 48px;">
@@ -12800,7 +12800,7 @@
                                   <div style="--gp-section-max-width: 1120px;">
                                     <div class="section-container">
                                       <div style="--maxWidth: 1120px;" class="wrapper-full max__width dir dir-ltr">
-                                        <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+                                        <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
                                         <div data-plugin-in-point-id="ADD_ON_SERVICES_LUXE"
                                           data-section-id="ADD_ON_SERVICES_LUXE"
                                           style="padding-top: 48px; padding-bottom: 48px;">
@@ -13114,7 +13114,7 @@
                                   <div style="--gp-section-max-width: 1120px;">
                                     <div class="section-container">
                                       <div style="--maxWidth: 1120px;" class="wrapper-full max__width dir dir-ltr">
-                                        <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+                                        <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
                                         <div data-plugin-in-point-id="AMENITIES_LUXE" data-section-id="AMENITIES_LUXE"
                                           style="padding-top: 48px; padding-bottom: 48px;">
                                           <section>
@@ -13222,7 +13222,7 @@
                                   <div style="--gp-section-max-width: 1120px;">
                                     <div class="section-container">
                                       <div style="--maxWidth: 1120px;" class="wrapper-full max__width dir dir-ltr">
-                                        <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+                                        <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
                                         <div data-plugin-in-point-id="EDUCATION_LUXE" data-section-id="EDUCATION_LUXE"
                                           style="padding-top: 48px; padding-bottom: 48px;">
                                           <div class="h1e0znt6 dir dir-ltr">
@@ -14221,7 +14221,7 @@
                                   <div style="--gp-section-max-width: 1120px;">
                                     <div class="section-container">
                                       <div style="--maxWidth: 1120px;" class="wrapper-full max__width dir dir-ltr">
-                                        <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+                                        <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
                                         <div data-plugin-in-point-id="LOCATION_DEFAULT"
                                           data-section-id="LOCATION_DEFAULT"
                                           style="padding-top: 48px; padding-bottom: 48px;">
