--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -573,7 +573,7 @@
                                   style="--maxWidth: 1120px"
                                 >
                                   <div
-                                    class="_npr0qi"
+                                    class="hr"
                                     style="border-top-color: rgb(221, 221, 221)"
                                   ></div>
                                   <div
