--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -2349,7 +2349,7 @@
                         <div style="--gp-section-max-width:1120px;">
                           <div class="section-container">
                             <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
-                              <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);">
+                              <div class="hr" style="border-top-color: rgb(221, 221, 221);">
                               </div>
                               <div data-plugin-in-point-id="INBOX_FILTERS_MESSAGE_TYPE" data-section-id="INBOX_FILTERS_MESSAGE_TYPE" style="padding-top: 32px; padding-bottom: 32px;">
                                 <div>
