--- a/payments/payment.html
+++ b/payments/payment.html
@@ -4720,7 +4720,7 @@
                                         <div class="flex-before-after dir dir-ltr">
                                           <div style="--gp-section-max-width:1120px;">
                                             <div style="margin-top: 8px; --gp-section-top-margin:8;">
-                                              <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+                                              <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
                                               <div data-plugin-in-point-id="TITLE_ADDITIONAL_REQUIREMENT" data-section-id="TITLE_ADDITIONAL_REQUIREMENT"
                                                 style="padding-top: 32px; padding-bottom: 24px;">
                                                 <section>
