--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -6947,7 +6947,7 @@
                                       <div style="--gp-section-max-width: 1120px">
                                         <div class="section-container">
                                           <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
-                                            <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221)"></div>
+                                            <div class="hr" style="border-top-color: rgb(221, 221, 221)"></div>
                                             <div
                                               data-plugin-in-point-id="REPORT_TO_AIRBNB"
                                               data-section-id="REPORT_TO_AIRBNB"
