--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -3780,7 +3780,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
             </div>
             <footer>
              <div style="--gp-section-max-width: 1120px;">
-              <div class="_npr0qi" style="border-top-color: rgb(221, 221, 221);"></div>
+              <div class="hr" style="border-top-color: rgb(221, 221, 221);"></div>
               <div data-plugin-in-point-id="CONCEPT_REFINEMENT_0_FOOTER" data-section-id="CONCEPT_REFINEMENT_0_FOOTER" style="padding-top: 16px; padding-bottom: 16px;">
                <div class="c1sjhfzr t1pii32p dir dir-ltr">
                 <div class="flex-before-after dir dir-ltr">
