--- a/become-a-host/welcome.html
+++ b/become-a-host/welcome.html
@@ -172,7 +172,7 @@
                            <div class="a1n3nwiv dir dir-ltr">
                             <h2 class="h169a49r dir dir-ltr" id="action-group-0">Finish your listing</h2>
                             <div role="group" aria-labelledby="action-group-0">
-                             <div class="a1rgsqn9 a1p7fbvz dir dir-ltr">
+                             <div class="a1rgsqn9 pb-3 dir dir-ltr">
                               <button type="button" class="list-group-action__btn">
                                <span class="list-group-action__btn-body">
                                 <span class="list-group-action__left-icon">
@@ -209,7 +209,7 @@
                                </span>
                               </button>
                              </div>
-                             <div class="a1rgsqn9 a1p7fbvz dir dir-ltr">
+                             <div class="a1rgsqn9 pb-3 dir dir-ltr">
                               <button type="button" class="list-group-action__btn">
                                <span class="list-group-action__btn-body">
                                 <span class="list-group-action__left-icon">
@@ -243,7 +243,7 @@
                                </span>
                               </button>
                              </div>
-                             <div class="a1rgsqn9 a1p7fbvz dir dir-ltr">
+                             <div class="a1rgsqn9 pb-3 dir dir-ltr">
                               <button type="button" class="list-group-action__btn">
                                <span class="list-group-action__btn-body">
                                 <span class="list-group-action__left-icon">
@@ -284,7 +284,7 @@
                            <div class="a1n3nwiv dir dir-ltr">
                             <h2 class="h169a49r dir dir-ltr" id="action-group-1">Start a new listing</h2>
                             <div role="group" aria-labelledby="action-group-1">
-                             <div class="a1rgsqn9 a1p7fbvz dir dir-ltr">
+                             <div class="a1rgsqn9 pb-3 dir dir-ltr">
                               <button type="button" class="list-group-action__btn">
                                <span class="list-group-action__btn-body">
                                 <span class="list-group-action__left-icon">
@@ -315,7 +315,7 @@
                                </span>
                               </button>
                              </div>
-                             <div class="a1rgsqn9 a1p7fbvz dir dir-ltr" id="open-modal-welcome">
+                             <div class="a1rgsqn9 pb-3 dir dir-ltr" id="open-modal-welcome">
                               <button type="button" class="list-group-action__btn">
                                <span class="list-group-action__btn-body">
                                 <span class="list-group-action__left-icon">
