--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -16540,7 +16540,7 @@
                                     <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:0;">
                                       <div class="calendar-dropdown__title dir dir-ltr">
                                         <section>
-                                          <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">
+                                          <h2 tabindex="-1" class="heading dir dir-ltr" elementtiming="LCP-target">
                                             Select check-in date</h2>
                                         </section>
                                       </div>
