--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1379,7 +1379,7 @@
                                                   <section>
                                                     <div class="c6y5den dir dir-ltr">
                                                       <div class="tehcqxo dir dir-ltr">
-                                                        <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">Meet your Host, Kat</h2>
+                                                        <h2 tabindex="-1" class="heading dir dir-ltr" elementtiming="LCP-target">Meet your Host, Kat</h2>
                                                         <div class="s9fngse dir dir-ltr">
                                                           <ol class="place__rate-text-wrapper dir dir-ltr">
                                                             <li class="place__rate-text dir dir-ltr">Host on Airbnb since 2011</li>
@@ -3186,7 +3186,7 @@
               <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:0;">
                 <div class="calendar-dropdown__title dir dir-ltr">
                   <section>
-                    <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">More online experiences
+                    <h2 tabindex="-1" class="heading dir dir-ltr" elementtiming="LCP-target">More online experiences
                     </h2>
                   </section>
                 </div>
@@ -6286,7 +6286,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                           </a></div>
                                                       </div>
                                                       <div class="tehcqxo dir dir-ltr">
-                                                        <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">Meet your Host, Kat</h2>
+                                                        <h2 tabindex="-1" class="heading dir dir-ltr" elementtiming="LCP-target">Meet your Host, Kat</h2>
                                                         <div class="s9fngse dir dir-ltr">
                                                           <ol class="place__rate-text-wrapper dir dir-ltr">
                                                             <li class="place__rate-text dir dir-ltr">Host on Airbnb since 2011</li>
@@ -8873,7 +8873,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
           <section>
             <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:3;">
               <div class="calendar-dropdown__title dir dir-ltr">
-                <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">Things to know</h2>
+                <h2 tabindex="-1" class="heading dir dir-ltr" elementtiming="LCP-target">Things to know</h2>
               </div>
             </div>
             <div class="_ttrffo">
@@ -8972,7 +8972,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
               <div class="products-container__header-text-pb dir dir-ltr" style="--spacingBottom:0;">
                 <div class="calendar-dropdown__title dir dir-ltr">
                   <section>
-                    <h2 tabindex="-1" class="hnwb2pb dir dir-ltr" elementtiming="LCP-target">More online experiences
+                    <h2 tabindex="-1" class="heading dir dir-ltr" elementtiming="LCP-target">More online experiences
                     </h2>
                   </section>
                 </div>
