alert-danger-bordered

--- a/misc-pages/404.html
+++ b/misc-pages/404.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <div class="alert-danger" role="alert" style="margin-left: 24px !important; margin-right: 24px !important;">
+    <div class="alert-danger-bordered" role="alert" style="margin-left: 24px !important; margin-right: 24px !important;">
       <div class="alert__icon">
         <svg
           viewBox="0 0 32 32"
