carousel-scroll-snap

--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1781,7 +1781,7 @@
                                                       "
                                                     >
                                                       <ul
-                                                        class="mobile-carousel__slide-wrapper hidden-scrollbar"
+                                                        class="carousel-scroll-snap hidden-scrollbar"
                                                         style="
                                                           margin-left: -6px;
                                                           margin-right: -6px;
@@ -2467,7 +2467,7 @@
           style="--carousel-wrapper-margin: 0px"
         >
           <ul
-            class="mobile-carousel__slide-wrapper"
+            class="carousel-scroll-snap"
             style="margin-left: -8px; margin-right: -8px; scroll-padding: 24px"
           >
             <div aria-hidden="true" style="flex: 0 0 24px" class="hidden block-md"></div>
