--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -419,7 +419,7 @@
                                     <div class="img-container">
                                       <ul
                                         aria-label="Photo of Nobu Malibu in Eastern Malibu"
-                                        class="mobile-carousel__slide-wrapper"
+                                        class="carousel-scroll-snap"
                                         style="margin-left: 0px; margin-right: 0px"
                                       >
                                         <li
