--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -294,7 +294,7 @@
                                           >
                                             <div class="image-container">
                                               <ul
-                                                class="mobile-carousel__slide-wrapper hidden-scrollbar"
+                                                class="carousel-scroll-snap hidden-scrollbar"
                                                 style="
                                                   margin-left: 0px;
                                                   margin-right: 0px;
@@ -5589,7 +5589,7 @@
                                                       "
                                                     >
                                                       <ul
-                                                        class="mobile-carousel__slide-wrapper hidden-scrollbar"
+                                                        class="carousel-scroll-snap hidden-scrollbar"
                                                         style="
                                                           margin-left: -6px;
                                                           margin-right: -6px;
@@ -12188,7 +12188,7 @@
                   <div data-testid="photo-viewer-slideshow" class="_1kpe7lgb">
                     <div class="image-container">
                       <ul
-                        class="mobile-carousel__slide-wrapper"
+                        class="carousel-scroll-snap"
                         style="margin-left: -5px; margin-right: -5px"
                       >
                         <li
