--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -891,7 +891,7 @@
                                               </div>
                                               <div class="cob9xum czbu900 dir dir-ltr"
                                                 style="--carousel-wrapper-margin:-6px;">
-                                                <ul class="mobile-carousel__slide-wrapper"
+                                                <ul class="carousel-scroll-snap"
                                                   style="margin-left: 0px; margin-right: 0px; scroll-padding: 18px;">
                                                   <div aria-hidden="true" style="flex: 0 0 18px;"></div>
                                                   <li aria-hidden="false" data-key="Bedroom 1" class="feature__airbnb-li"
@@ -2993,7 +2993,7 @@
                                             </div>
                                             <div class="cob9xum czbu900 dir dir-ltr"
                                               style="--carousel-wrapper-margin:0px;">
-                                              <ul class="mobile-carousel__slide-wrapper"
+                                              <ul class="carousel-scroll-snap"
                                                 style="margin-left: -6px; margin-right: -6px; scroll-padding: 24px;">
                                                 <div aria-hidden="true" style="flex: 0 0 24px;"></div>
                                                 <li aria-hidden="false" data-key="Always fully equipped"
@@ -3737,7 +3737,7 @@
                                                   <div class="cob9xum czbu900 dir dir-ltr" style="
                                                         --carousel-wrapper-margin: 0px;
                                                       ">
-                                                    <ul class="mobile-carousel__slide-wrapper hidden-scrollbar" style="
+                                                    <ul class="carousel-scroll-snap hidden-scrollbar" style="
                                                           margin-left: -6px;
                                                           margin-right: -6px;
                                                           scroll-padding: 24px;
@@ -6704,7 +6704,7 @@
                                                 </div>
                                                 <div class="cob9xum dir dir-ltr"
                                                   style="--carousel-wrapper-margin:-8px;">
-                                                  <ul class="mobile-carousel__slide-wrapper" style="margin-left: 0px; margin-right: 0px;">
+                                                  <ul class="carousel-scroll-snap" style="margin-left: 0px; margin-right: 0px;">
                                                     <li aria-hidden="false" data-key="Bedroom 1" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 1" class="h-full">
@@ -16670,7 +16670,7 @@
                 </div>
                 <div data-testid="photo-viewer-slideshow" class="_1kpe7lgb">
                   <div class="image-container">
-                    <ul class="mobile-carousel__slide-wrapper" style="margin-left: -5px; margin-right: -5px;">
+                    <ul class="carousel-scroll-snap" style="margin-left: -5px; margin-right: -5px;">
                       <li aria-hidden="false" data-key="627033186" class="carousel-slider__item"
                         style="border-width: 0px 5px;">
                         <div data-key="627033186" class="h-full">
