--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -233,7 +233,7 @@
                                       <div data-plugin-in-point-id="HERO_DEFAULT" data-section-id="HERO_DEFAULT">
                                         <div class="page-shell-mobile__container">
                                           <div class="image-container">
-                                            <ul class="mobile-carousel__slide-wrapper hidden-scrollbar" style="
+                                            <ul class="carousel-scroll-snap hidden-scrollbar" style="
                                                                   margin-left: 0px;
                                                                   margin-right: 0px;
                                                                 ">
@@ -3273,7 +3273,7 @@
                                                   <div class="cob9xum czbu900 dir dir-ltr" style="
                                                                         --carousel-wrapper-margin: 0px;
                                                                       ">
-                                                    <ul class="mobile-carousel__slide-wrapper hidden-scrollbar" style="
+                                                    <ul class="carousel-scroll-snap hidden-scrollbar" style="
                                                                           margin-left: -6px;
                                                                           margin-right: -6px;
                                                                           scroll-padding: 24px;
@@ -18846,7 +18846,7 @@
                 </div>
                 <div data-testid="photo-viewer-slideshow" class="_1kpe7lgb">
                   <div class="image-container">
-                    <ul class="mobile-carousel__slide-wrapper" style="margin-left: -5px; margin-right: -5px">
+                    <ul class="carousel-scroll-snap" style="margin-left: -5px; margin-right: -5px">
                       <li aria-hidden="false" data-key="783219838" class="carousel-slider__item"
                         style="border-width: 0px 5px">
                         <div data-key="783219838" class="h-full">
@@ -25147,7 +25147,7 @@
                                       </button>
                                     </div>
                                     <div class="img-container">
-                                      <ul aria-label="9 double bedroom luxury villa with infinity pool" class="mobile-carousel__slide-wrapper"
+                                      <ul aria-label="9 double bedroom luxury villa with infinity pool" class="carousel-scroll-snap"
                                         style="
                                             margin-left: 0px;
                                             margin-right: 0px;
