--- a/listings-product/specific_trip.html
+++ b/listings-product/specific_trip.html
@@ -247,7 +247,7 @@
                                                     >
                                                       <div class="image-container">
                                                         <ul
-                                                          class="mobile-carousel__slide-wrapper"
+                                                          class="carousel-scroll-snap"
                                                           style="
                                                             margin-left: 0px;
                                                             margin-right: 0px;
