--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -3593,7 +3593,7 @@
                                           </div>
                                           <div style="--carousel-wrapper-margin: 0px;"
                                             class="cob9xum czbu900 dir dir-ltr">
-                                            <ul class="mobile-carousel__slide-wrapper"
+                                            <ul class="carousel-scroll-snap"
                                               style="margin-left: -6px; margin-right: -6px; scroll-padding: 24px;">
                                               <div style="flex: 0 0 24px;" aria-hidden="true"></div>
                                               <li aria-hidden="false" data-key="Start-to-finish trip planning"
@@ -3764,7 +3764,7 @@
                                                   <div class="cob9xum czbu900 dir dir-ltr" style="
                                                         --carousel-wrapper-margin: 0px;
                                                       ">
-                                                    <ul class="mobile-carousel__slide-wrapper hidden-scrollbar" style="
+                                                    <ul class="carousel-scroll-snap hidden-scrollbar" style="
                                                           margin-left: -6px;
                                                           margin-right: -6px;
                                                           scroll-padding: 24px;
@@ -7448,7 +7448,7 @@
                                                 </div>
                                                 <div class="cob9xum dir dir-ltr"
                                                   style="--carousel-wrapper-margin:-8px;">
-                                                  <ul class="mobile-carousel__slide-wrapper" style="margin-left: 0px; margin-right: 0px;">
+                                                  <ul class="carousel-scroll-snap" style="margin-left: 0px; margin-right: 0px;">
                                                     <li aria-hidden="false" data-key="Bedroom 1" class="feature__airbnb-li"
                                                       style="border-width: 0px; max-width: 50%; flex: 0 0 50%;">
                                                       <div data-key="Bedroom 1" class="h-full">
@@ -19572,7 +19572,7 @@
                 </div>
                 <div data-testid="photo-viewer-slideshow" class="_1kpe7lgb">
                   <div class="image-container">
-                    <ul class="mobile-carousel__slide-wrapper" style="margin-left: -5px; margin-right: -5px;">
+                    <ul class="carousel-scroll-snap" style="margin-left: -5px; margin-right: -5px;">
                       <li aria-hidden="false" data-key="560470338" class="carousel-slider__item"
                         style="border-width: 0px 5px;">
                         <div data-key="560470338" class="h-full">
