--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -271,7 +271,7 @@
                                           >
                                             <div class="image-container">
                                               <ul
-                                                class="mobile-carousel__slide-wrapper hidden-scrollbar"
+                                                class="carousel-scroll-snap hidden-scrollbar"
                                                 style="
                                                   margin-left: 0px;
                                                   margin-right: 0px;
@@ -6581,7 +6581,7 @@
               </div>
               <div data-testid="photo-viewer-slideshow" class="_1kpe7lgb">
                 <div class="image-container">
-                  <ul class="mobile-carousel__slide-wrapper" style="margin-left: -5px; margin-right: -5px;">
+                  <ul class="carousel-scroll-snap" style="margin-left: -5px; margin-right: -5px;">
                     <li aria-hidden="false" data-key="783219838" class="carousel-slider__item" style="border-width: 0px 5px;">
                       <div data-key="783219838" class="h-full">
                         <div class="_onta11">
